# proxudesktop

./: README.md  index.html  package-lock.json  package.json
scripts/: check-linux-prereqs.sh  install-linux-prereqs.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  proxudesktop.desktop  tauri.conf.json
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  xray.rs
src-tauri/src/service/: linux.rs  mod.rs  stub.rs  windows.rs
