[package]
name = "proxudesktop"
version = "0.1.0"
description = "Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "proxudesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "socks"] }
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2"
base64 = "0.21"
zip = "0.6"
which = "4"
dirs = "5"
rand = "0.8"
